Changed button colours

--- a/src/SortingVisualiser/SortingVisualiser.css
+++ b/src/SortingVisualiser/SortingVisualiser.css
@@ -33,8 +33,8 @@
 
 .sort-button {
     margin: 10px 10px;
-    /*background-color: white !important;*/
-    /*border-color: white !important;*/
+    background-color: #BD8BDD !important;
+    border-color: #BD8BDD !important;
     /*color: black !important;*/
     width: 15%;
     height: 50%;
