--- a/src/SortingVisualiser/SortingVisualiser.css
+++ b/src/SortingVisualiser/SortingVisualiser.css
@@ -62,3 +62,8 @@
     background-color: red;
     border-color: red;
 }
+
+#learn-more {
+    background-color: #BD8BDD;
+    border-color: #BD8BDD;
+}
